# py-devcontainer

./: README.md  py-devcontainer.code-workspace  pyproject.toml
.devcontainer/: devcontainer.json
src/devcontainer/: __init__.py  cli.py
tests/: test_cli.py
